# adaptive-island

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSES.md  NOTICE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: package-check.yml  publish-check.yml  snyk-security.yml
client/python/: README.md  pyproject.toml
client/python/adaptive_island/: __init__.py  selector.py
client/typescript/: package-lock.json  package.json  tsconfig.json
client/typescript/src/: index.ts
client/typescript/test/: selector.test.ts
docs/: adopt-on-existing-event-log.md  architecture.md  data-contract.md  deploy-on-databricks.md  evaluation-metrics.md  routing-lifecycle.md  scoring-config.md  testing-failure-modes.md
examples/adopt-existing-log/: README.md  adapter_view.sql
examples/databricks-asset-bundle/: README.md  databricks.yml
examples/docker-compose-local/: README.md  docker-compose.yml
examples/local-synthetic-demo/: README.md  attempts.csv  rank_from_csv.py  ranking.expected.json  sdk-cache-demo.mjs
examples/python-sdk-demo/: README.md  demo.py
examples/real-stack-smoke/: README.md  validate.py
examples/supabase-provider-cost-log/: provider_cost_log.sql
jobs/: export_rankings.py
pipelines/: bronze_provider_attempts.py  gold_provider_ranking_by_model.py  silver_provider_attempts.py
schemas/: attempt.v1.json  ranking.v1.json  tags.md
tests/python/: test_redis_url.py  test_selector_cache_hit.py  test_selector_fail_open.py
training/: train.py
